fixed some spacing

--- a/components/project.css
+++ b/components/project.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   text-align: center;
   margin-top: 5rem;
-  padding-bottom: 5rem;
+  padding-bottom: 2.5rem;
 }
 .project-section__headline--space {
   margin-top: 5rem;
