--- a/components/skills.css
+++ b/components/skills.css
@@ -1,5 +1,6 @@
 .social-icons--position {
   margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 .skill-section {
   display: flex;
